Implement deploying and fix building errors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,5 @@
     "baseUrl": "./src",
     "downlevelIteration": true
   },
-  "include": ["src", "./src/setupTests.ts"]
+  "include": ["src"]
 }
