--- a/package.json
+++ b/package.json
@@ -1,20 +1,16 @@
 {
-  "name": "my-app",
+  "name": "searchbox",
   "version": "0.1.1",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.7.0",
     "@mui/icons-material": "^5.0.5",
-    "@testing-library/jest-dom": "^5.15.0",
-    "@types/enzyme": "^3.10.10",
-    "@types/jest": "^27.0.2",
     "@types/node": "^16.11.6",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@types/react-redux": "^7.1.20",
     "@types/react-router-dom": "^5.3.2",
     "axios": "^0.24.0",
-    "enzyme": "^3.11.0",
-    "jest": "^27.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.19.3",
@@ -32,14 +28,13 @@
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "restyle": "npx prettier --write 'src/**/*.{ts,tsx,json,md}'"
+    "restyle": "npx prettier --write 'src/**/*.{ts,tsx,json,md}'",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest",
       "prettier"
     ],
     "overrides": [
@@ -84,9 +79,7 @@
     "@types/styled-components": "^5.1.15",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
     "babel-eslint": "^10.1.0",
-    "enzyme-to-json": "^3.6.2",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-react-app": "^6.0.0",
@@ -98,10 +91,10 @@
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-testing-library": "^3.10.2",
+    "gh-pages": "^3.2.3",
     "husky": "^7.0.4",
     "lint-staged": "^11.2.6",
     "prettier": "2.2.1",
-    "redux-devtools-extension": "^2.13.9",
-    "ts-jest": "^27.0.7"
+    "redux-devtools-extension": "^2.13.9"
   }
 }
