--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://yamamoto-ichiro.github.io/searchbox-test/",
   "name": "searchbox",
   "version": "0.1.1",
   "private": true,
